# mart-forge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: cli-tests.yml  ecommerce-mart-ci.yml  framework-ci.yml  gme-mart-ci.yml
bi_req/: PROBLEM_STATEMENT.md
docs/: agent-orchestration.md  bus-matrix.md  dimensional-lifecycle.md  dqc-framework.md  naming-conventions.md  provider-abstraction.md
examples/ecommerce-orders-mart/: README.md  dbt_project.yml  dqc_scorecard.json  mart.yml  profiles.yml
examples/ecommerce-orders-mart/models/: schema.yml
examples/ecommerce-orders-mart/models/dim/: ecom_dim_customer.sql  (+2 more)
examples/ecommerce-orders-mart/seeds/: dim_date.csv  raw_customers.csv  raw_orders.csv  raw_products.csv
examples/ecommerce-orders-mart/tests/: test_dqc_accepted_ranges.sql  test_dqc_completeness.sql  test_dqc_duplicate_detection.sql  test_dqc_freshness.sql  test_dqc_null_rate.sql  test_dqc_reconciliation.sql
examples/gme-options-mart/: .env.example  README.md  brd_link_verification.json  business-requirements.md  dbt_project.yml  dqc_scorecard.json  mart.yml  profiles.yml  sign-off-prd.md  tech-design-doc.md
examples/gme-options-mart/dashboard/: app.py  requirements.txt  smoke_test.py
examples/gme-options-mart/fixtures/: MANIFEST.md  gme_ods_cboe_options_chain.parquet
examples/gme-options-mart/macros/: http_read_json.sql  http_retry_config.sql
examples/gme-options-mart/models/: schema.yml
examples/gme-options-mart/scripts/: openbb_gex_probe.py
examples/gme-options-mart/seeds/: dim_date.csv  gme_social_sentiment.csv  gme_underlying_closes.csv
examples/gme-options-mart/tests/: test_dqc_accepted_ranges.sql  test_dqc_completeness.sql  test_dqc_duplicate_detection.sql  test_dqc_freshness.sql  test_dqc_null_rate.sql  test_dqc_reconciliation.sql  test_dwd_incremental_idempotence.sql  test_max_pain_no_mixed_class.sql  test_ods_incremental_history.sql
hooks/: README.md  hooks.json
scripts/: confidentiality_scan.py  dqc_update.py  validate_templates.py  verify_brd_links.py
skills/dqc-audit/: README.md  SKILL.md
skills/mart-bootstrap/: README.md  SKILL.md
skills/mart-brd/: README.md  SKILL.md
skills/mart-dqc/: SKILL.md
skills/mart-review/: README.md  SKILL.md
skills/mart-tdd/: README.md  SKILL.md
skills/schema-evolve/: README.md  SKILL.md
skills/source-discovery/: SKILL.md
skills/using-mart-forge/: SKILL.md
src/mart_forge/: __init__.py  _resources.py  cli.py  dqc_update.py  scaffold.py  scan.py  validate.py
templates/: business-requirements.template.md  dqc_scorecard.template.json  mart.yml.template  sign-off-prd.template.md  tech-design-doc.template.md
templates/dashboard/: app.py
templates/models/ads/: template.sql
templates/models/dim/: template.sql
templates/models/dwd/: template.sql
templates/models/dws/: template.sql
templates/models/ods/: template.sql
templates/pipeline/: daily.yml.template
templates/seeds/: dim_date.csv  raw_sample_data.csv
templates/tests/: template_singular.sql
tests/: test_cli_gates.py  test_confidentiality.py  test_framework_structure.py  test_scaffold.py
(+21 files in other folders)
