[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mart-forge"
version = "3.0.0"
description = "Methodology-first, agent-executable specification for scaffolding and reviewing Kimball data warehouses"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "LongShortNMargin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "dbt-core>=1.7,<2.0",
    "dbt-duckdb>=1.7,<2.0",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
mart-forge = "mart_forge.cli:main"
dqc-update = "mart_forge.dqc_update:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mart_forge"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "mart_forge/templates"
"skills" = "mart_forge/skills"
"docs" = "mart_forge/docs"
"scripts" = "mart_forge/scripts"
".claude-plugin" = "mart_forge/.claude-plugin"
"hooks" = "mart_forge/hooks"
"CLAUDE.md" = "mart_forge/CLAUDE.md"
"SPEC.md" = "mart_forge/SPEC.md"
"METHODOLOGY.md" = "mart_forge/METHODOLOGY.md"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
